# wasi-keyvalue

./: README.md
host-component-implementation/: README.md
host-component-implementation/kv-custom/: Cargo.toml
host-component-implementation/kv-custom-host/: Cargo.toml
host-component-implementation/kv-custom-host/src/: echo.rs  main.rs
host-component-implementation/kv-custom/src/: bindings.rs  lib.rs
host-component-implementation/wit/: kv-custom.wit
wit/: atomic.wit  batch.wit  crud.wit  types.wit  world.wit
